MNEMOSYNE 0.9.8

(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)

-make tab-separated import resistant to the presence of multiple tabs 
 (reported by J. Forrez).
-fixed hang when end quotes are not present inside a tag.
-fixed regression where the active flag of categories was not respected on
 import (reported by A. Rachmatullah).
-disable 'edit item' as long as the aswer is not shown, to prevent 
 accidentally revealing it (patch by D. Herrmann).
-respect left align option in 'preview items' (reported by E. Grannan).
-various small interface cleanups and fixes.


MNEMOSYNE 0.9.7: 2006-10-27

-multiple items can now be selected in the 'edit items' dialog in order
 to delete them, change their categories, or add their vice versas.
-added option to import text files where question and answer are each on
 their own line.
-again respect window size set by user.
-make delete button work in 'edit items' dialog (reported by J. Forrez).
-worked around oddity (extra first character in text file) when importing 
 Word unicode text files.
-various small interface cleanups and fixes.
-updated documentation on the website.


MNEMOSYNE 0.9.6: 2006-10-07

-added LaTeX support for formulas, e.g. <latex>x^2+y^2=z^2</latex>. For 
 this you need latex and dvipng installed. Windows users can download 
 MiKTeX. (thanks to input from Henrik Skov Midtiby and J. David Lee.)
-added possibility to preview an item. Useful if you work with tags.
-added import from SuperMemo7 text files (code thanks to Dirk Herrmann).
-either space, enter or return can be used to show the answer. The default
 answer grade is set to 4, which once again can be chosen by either space,
 enter or return (patch by Dirk Herrmann).
-importing of txt files in utf8 unicode encoding now works (patch by Ian 
 MacLean).
-exporting to txt files now uses utf8 encoding.
-the total number of items in the status bar now only takes into account